[package]
name = "zmq-nats-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.40.0"
zeromq = "0.4.1"
bytes = "1.6.1"
futures = "0.3"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
config = { version = "0.15.0", features = ["toml"] }
clap = { version = "4.5.9", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
humantime-serde = "1.1"
thiserror = "2.0.12"
humantime = "2.1"
